--- a/testesDonaMariana.WinApp/testesDonaMariana.WinApp.csproj
+++ b/testesDonaMariana.WinApp/testesDonaMariana.WinApp.csproj
@@ -24,12 +24,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\TestesDonaMariana.Domain.csproj" />
+    <ProjectReference Include="..\TestesDonaMariana.Serializador\TestesDonaMariana.Serializador.csproj" />
     <ProjectReference Include="..\testesDonaMriana.Controlador\testesDonaMriana.Controlador.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Modulos\QuestaoMol\ColetaDados\" />
-    <Folder Include="Modulos\QuestaoMol\Configuracoes\" />
   </ItemGroup>
 
 </Project>
