ATT DE CORRECAO DE NOME DE DIRETORIO e projectos

--- a/testesDonaMariana.WinApp/testesDonaMariana.WinApp.csproj
+++ b/testesDonaMariana.WinApp/testesDonaMariana.WinApp.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\TestesDonaMariana.Domain.csproj" />
+    <ProjectReference Include="..\testesDonaMariana.Dominio\TestesDonaMariana.Domain.csproj" />
     <ProjectReference Include="..\TestesDonaMariana.Serializador\TestesDonaMariana.Serializador.csproj" />
     <ProjectReference Include="..\testesDonaMriana.Controlador\testesDonaMriana.Controlador.csproj" />
   </ItemGroup>
