--- a/testesDonaMriana.Controlador.Db/testesDonaMriana.Controlador.Db.csproj
+++ b/testesDonaMriana.Controlador.Db/testesDonaMriana.Controlador.Db.csproj
@@ -9,8 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\TestesDonaMariana.Domain.csproj" />
     <ProjectReference Include="..\TestesDonaMariana.DataBase\TestesDonaMariana.DataBase.csproj" />
+    <ProjectReference Include="..\testesDonaMariana.Dominio\TestesDonaMariana.Domain.csproj" />
   </ItemGroup>
 
 </Project>
