--- a/testesDonaMriana.Controlador/testesDonaMriana.Controlador.csproj
+++ b/testesDonaMriana.Controlador/testesDonaMriana.Controlador.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\TestesDonaMariana.Domain.csproj" />
+    <ProjectReference Include="..\testesDonaMariana.Dominio\TestesDonaMariana.Domain.csproj" />
   </ItemGroup>
 
 </Project>
