--- a/TestesDonaMariana.DataBase/TestesDonaMariana.DataBase.csproj
+++ b/TestesDonaMariana.DataBase/TestesDonaMariana.DataBase.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shared\Db.cs" />
+    <Compile Include="Shared\DataBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
